test/Fail/Polarity-pragma-for-module-parameter.agda
{-# OPTIONS --warning=error #-}

module _ (A : Set) where

{-# POLARITY A #-}
